Bug 368242 - Default feeds still use kde-apps and kde-look
Summary: Default feeds still use kde-apps and kde-look
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL: http://store.kde.org
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-04 17:35 UTC by Jonathan Riddell
Modified: 2016-09-07 11:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2016-09-04 17:35:30 UTC
The default feeds still use kde-apps.org and kde-look.org, these websites are deprecated.  The feeds should be updated to use store.kde.org and kconf_update or whatever magic being used to remove them for existing uses.

Reproducible: Always
Comment 1 Laurent Montel 2016-09-04 18:54:47 UTC
I will update it tomorrow morning.
Thanks for info. no time this night :)
Comment 2 Laurent Montel 2016-09-05 04:49:55 UTC
Git commit 54e6628bcf1bef800eff1b68f88a517e888627db by Montel Laurent.
Committed on 05/09/2016 at 04:49.
Pushed by mlaurent into branch 'Applications/16.08'.

Remove obsolete website (and rdf is broken)

M  +0    -5    akregator/src/akregator_part.cpp

http://commits.kde.org/kdepim/54e6628bcf1bef800eff1b68f88a517e888627db
Comment 3 Laurent Montel 2016-09-05 04:50:55 UTC
Git commit 83a20274c8bdbb08d4f27036a1c80854b4cf9e8d by Montel Laurent.
Committed on 05/09/2016 at 04:50.
Pushed by mlaurent into branch 'master'.

Remove obsolete website (and rdf is broken)

M  +0    -5    src/akregator_part.cpp

http://commits.kde.org/akregator/83a20274c8bdbb08d4f27036a1c80854b4cf9e8d
Comment 4 Laurent Montel 2016-09-05 04:51:25 UTC
(In reply to Jonathan Riddell from comment #0)
> The default feeds still use kde-apps.org and kde-look.org, these websites
> are deprecated.  The feeds should be updated to use store.kde.org and
> kconf_update or whatever magic being used to remove them for existing uses.
> 
> Reproducible: Always

Do you know url for rss or rdf file ?
I was not able to find it
Comment 5 Denis Kurz 2016-09-07 08:07:14 UTC
> Do you know url for rss or rdf file ?

https://store.kde.org/content.rdf <-- This one?
Comment 6 Laurent Montel 2016-09-07 11:53:17 UTC
Git commit 004f0852e2d6a7c080396b1dfb97d42802e04610 by Montel Laurent.
Committed on 07/09/2016 at 11:53.
Pushed by mlaurent into branch 'master'.

Fix Bug 368242 - Default feeds still use kde-apps and kde-look

FIXED-IN: 5.3.1

M  +1    -1    src/akregator_part.cpp

http://commits.kde.org/akregator/004f0852e2d6a7c080396b1dfb97d42802e04610
Comment 7 Laurent Montel 2016-09-07 11:53:51 UTC
Git commit 3f3265e99cdf57659aed826d5e19878e41d446a2 by Montel Laurent.
Committed on 07/09/2016 at 11:53.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 368242 - Default feeds still use kde-apps and kde-look

FIXED-IN: 5.3.1

M  +1    -1    akregator/src/akregator_part.cpp

http://commits.kde.org/kdepim/3f3265e99cdf57659aed826d5e19878e41d446a2