Fix Bug 368242 - Default feeds still use kde-apps and kde-look

FIXED-IN: 5.3.1
BUG: 368242